# CW_8

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habit/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/management/commands/: clear_and_fill_db.py
habit/migrations/: 0001_initial.py  0002_alter_habit_user.py  0003_alter_habit_user.py  0004_alter_habit_number_of_executions.py
users/: admin.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
